--- a/movie/package.json
+++ b/movie/package.json
@@ -21,6 +21,7 @@
   },
   "homepage": "https://github.com/honelyboy/movie#readme",
   "devDependencies": {
+    "connect-mongo": "^1.3.2",
     "grunt": "^1.0.1",
     "grunt-concurrent": "^2.3.0",
     "grunt-contrib-jshint": "^1.0.0",
